--- a/test/fixtures/books.yml
+++ b/test/fixtures/books.yml
@@ -1,8 +1,8 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-# one:
-#   title: MyString
-#   memo: MyText
+one:
+  title: Ruby入門
+  memo: 名著です
 
 # two:
 #   title: MyString
