--- a/test/fixtures/books.yml
+++ b/test/fixtures/books.yml
@@ -1,6 +1,6 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
+cherrybook:
   title: Ruby入門
   memo: 名著です
 
