meとsheをfixtureに登録

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -7,3 +7,11 @@
 alice:
   email: alice@example.com
   encrypted_password: <%= Devise::Encryptor.digest(User, 'password') %>
+
+me:
+  email: 'me@example.com'
+  encrypted_password: <%= Devise::Encryptor.digest(User, 'password') %>
+
+she:
+  email: 'she@example.com'
+  encrypted_password: <%= Devise::Encryptor.digest(User, 'password') %>
